@@ -6,7 +6,7 @@
  *                                                                          *
  *                              C Header File                               *
  *                                                                          *
- *           Copyright (C) 1992-2009, Free Software Foundation, Inc.        *
+ *           Copyright (C) 1992-2010, Free Software Foundation, Inc.        *
  *                                                                          *
  * GNAT is free software;  you can  redistribute it  and/or modify it under *
  * terms of the  GNU General Public License as published  by the Free Soft- *
@@ -38,9 +38,6 @@
     %{c|S:%{o*:-auxbase-strip %*}%{!o*:-auxbase %b}}%{!c:%{!S:-auxbase %b}} \
     %{O*} %{W*} %{w} %{p} %{pg:-p} %{a} %{d*} %{f*}\
     %{coverage:-fprofile-arcs -ftest-coverage} "
-#if CONFIG_DUAL_EXCEPTIONS
-   "%{fRTS=sjlj:-fsjlj} "
-#endif
    "%{gnatea:-gnatez} %{g*&m*} "
 #if defined(TARGET_VXWORKS_RTP)
    "%{fRTS=rtp:-mrtp} "
